# transcribe

./: Cargo.toml
src/: app.rs  main.rs  waveform_cache.rs
src/audio/: decoder.rs  engine.rs  mod.rs  stretcher.rs  types.rs
src/ui/: controls.rs  mod.rs  waveform.rs
